package com.company;

abstract public class Animal {
    abstract public void greeting();
}
